--- a/playgrounds.conf
+++ b/playgrounds.conf
@@ -1,7 +1,7 @@
 server {
 	# Delete backlog=4096 if you did not increase net.core.somaxconn.
 	# If you don't know what this means, you should probably delete it :)
-	listen  localhost:8082 backlog=4096;
+	listen  127.0.0.1:8082 backlog=4096;
 	root /usr/local/var/www/Swift-Playgrounds-Subscription/;
 
 	# NGINX performance optimizations
