Add server_name to playgrounds.conf

--- a/playgrounds.conf
+++ b/playgrounds.conf
@@ -2,6 +2,8 @@ server {
 	# Delete backlog=4096 if you did not increase net.core.somaxconn.
 	# If you don't know what this means, you should probably delete it :)
 	listen  127.0.0.1:8082 backlog=4096;
+	server_name localhost;
+
 	root /usr/local/var/www/Swift-Playgrounds-Subscription/;
 
 	# NGINX performance optimizations
